--- a/aula_03/atividade_1.Rmd
+++ b/aula_03/atividade_1.Rmd
@@ -1,89 +1,140 @@
 ---
-title: "atividade_1"
+title: "Atividade Avaliativa 01"
 output: html_document
 ---
+Aluno: Pedro Tashima
 
-## Preparação dos dados
-```{r}
+## Introdução
+
+O sono está intimamente ligado ao bem-estar pscicológico, segundo a Academia Brasileira do Sono (2024), o sono é fundamental para a regulação emocional, a capacidade cognitiva, prevenção de transtornos mentais, resiliência psicológica, dentre outros aspectos da saúde mental.
+
+Este relatório utiliza dados de uma pesquisa realizada pelo setor de recursos humanos (RH) com uma amostra dos colaboradores de uma empresa. Seu objetivo é sugerir mudanças práticas e realistas de comportamento, principalmente ligados ao sono, que promovam a saúde mental dos colaboradores. Para isso, como contexto, serão apresentadas análises dos dados coletados e ao final, recomendações para o setor de RH.
+
+```{r, include=FALSE}
 # setup
 project_root_path <- getwd()
-source(paste0(project_root_path, "/definitions.R"))
-source(paste0(project_root_path, "/install_load_packages.R"), encoding = encoding)
+library("gt")
+library("dplyr")
 
-qualidade_sono <- read.csv(paste0(project_root_path, "/qualidade_sono.csv"), header = TRUE)
-data <- qualidade_sono
-head(data)
-str(data)
-```
+data <- read.csv(paste0(project_root_path, "/qualidade_sono.csv"), header = TRUE)
 
-## Alterações variáveis
-```{r}
-data <- data |> 
+# preparacao das variaveis
+data <- data |>
   dplyr::mutate(
     gender = factor(Gender),
     occupation = factor(Occupation),
     bmi = factor(BMI.Category),
-    sleep_disorder = factor(Sleep.Disorder))
-str(data)
-table(data$bmi)
-table(data$occupation)
+    sleep_disorder = factor(Sleep.Disorder)
+  )
 
-# Normal and Normal Weight are the same
+# Normal e Normal Weight sao o mesmo
 data <- data |>
   dplyr::mutate(
-    bmi_adj = factor(dplyr::case_when(bmi == 'Normal Weight' ~ 'Normal', TRUE ~ bmi),
-      levels = c('Normal', 'Overweight', 'Obese'), ordered = TRUE),
-    occupation_adj = dplyr::case_when(occupation %in% c('Salesperson', 'Sales Representative') ~ 'Sales',
-                                      occupation %in% c('Scientist', 'Software Engineer', 'Manager') ~ 'Other',
-                                      TRUE ~ occupation),
-    quality_of_sleep = factor(dplyr::case_when(Quality.of.Sleep <= 3 ~ 'Bad',
-                                        Quality.of.Sleep <= 6 ~ 'Medium',
-                                        Quality.of.Sleep <= 9 ~ 'Good',
-                                        TRUE ~ 'Excelent'),
-                          levels = c('Bad', 'Medium', 'Good', 'Excelent', ordered = TRUE)),
-    stress_level = factor(dplyr::case_when(Stress.Level <= 3 ~ 'Low',
-                                           Stress.Level <= 6 ~ 'Medium',
-                                           TRUE ~ 'High'),
-                          levels = c('Low', 'Mediuim', 'High'), ordered = TRUE))
+    bmi_adj = factor(dplyr::case_when(bmi == "Normal Weight" ~ "Normal", TRUE ~ bmi),
+      levels = c("Normal", "Overweight", "Obese"), ordered = TRUE
+    ),
+    occupation_adj = factor(dplyr::case_when(
+      occupation %in% c("Salesperson", "Sales Representative") ~ "Sales",
+      occupation %in% c("Scientist", "Software Engineer", "Manager") ~ "Other",
+      TRUE ~ occupation
+    )),
+    quality_of_sleep = factor(
+      dplyr::case_when(
+        Quality.of.Sleep <= 3 ~ "Bad",
+        Quality.of.Sleep <= 6 ~ "Medium",
+        Quality.of.Sleep <= 9 ~ "Good",
+        TRUE ~ "Excelent"
+      ),
+      levels = c("Bad", "Medium", "Good", "Excelent"), ordered = TRUE
+    ),
+    stress_level = factor(
+      dplyr::case_when(
+        Stress.Level < 3 ~ "Low",
+        Stress.Level < 6 ~ "Medium",
+        TRUE ~ "High"
+      ),
+      levels = c("Low", "Medium", "High"), ordered = TRUE
+    )
+  )
 
 data <- data |>
-  dplyr::select(-c('Gender', 'Occupation',  'Blood.Pressure', 'Sleep.Disorder', 'BMI.Category', 'Stress.Level', 'Quality.of.Sleep', 'occupation', 'bmi'))
-  
+  dplyr::select(-c("Gender", "Occupation", "Blood.Pressure", "Sleep.Disorder", "BMI.Category", "Stress.Level", "Quality.of.Sleep", "occupation", "bmi"))
+
+# explorando o stress
+round(prop.table(table(data$stress_level, data$occupation_adj), margin = 1) * 100, 0)
 skimr::skim(data)
 
+total_employees <- length(data$Person.ID)
+employees_sleep_disorder <- length(which(data$sleep_disorder != "None"))
+sleep_disorder_percentage <- round((employees_sleep_disorder / total_employees) * 100)
+
 str(data)
+summary(data)
 table(data$occupation_adj)
 table(data$bmi_adj)
 table(data$quality_of_sleep)
 table(data$stress_level)
-summary(data)
+```
+### Distúrbios do sono
+Dentre os `r total_employees` colaboradores analisados, `r employees_sleep_disorder` apresentavam algum tipo de distúrbio do sono, `r sleep_disorder_percentage`% do total, um percentual extremamente significativo (ver gráfico 1).
+
+```{R echo=FALSE}
+freq_sleep_disorder <- sort(table(data$sleep_disorder), decreasing = TRUE)
+sleep_disorder_bars <- barplot(freq_sleep_disorder,
+  main = "Gráfico 1: Distúrbios do sono (n)",
+  xlab = "Distúrbio do sono",
+  ylab = "Frequência absoluta",
+  col = c("#4DA8DA", "#80D8C3", "#FFD66B"),
+  ylim = c(0, 250)
+)
+text(x = sleep_disorder_bars, y = freq_sleep_disorder + 10, labels = as.character(freq_sleep_disorder))
 ```
 
-## explorando o stress
-```{r}
-table(data$stress_level, data$occupation_adj)
-round(prop.table(table(data$stress_level, data$occupation_adj), margin = 1) * 100,0)
+### Quantidade de sono
+A mediana da quantidade de sono dos colaboradores é de `r median(data$Sleep.Duration)` horas, com uma variância de `r var(data$Sleep.Duration)` (gráfico 2), indicando que, apesar de uma mediana saudável (ACADEMIA BRASILEIRA DO SONO, 2025), muitos colaboradores estão no quartil inferior com uma quantidade insuficiente de horas de sono por noite (gráfico 3).
+```{R echo=FALSE}
+hist(data$Sleep.Duration, breaks = seq(5, 9, by = 0.2),
+     main = "Gráfico 2: Histograma da duração do sono",
+     xlab = "Duração do sono (h)",
+     ylab = "Frequencia",
+     col="purple")
+
+boxplot(data$Sleep.Duration,
+        col = "purple",
+        border = "black")
+title("Gráfico 3: Boxplot duração do sono (h)")
 ```
 
-```{r}
-plot(
-  x = qualidade_sono$Sleep.Duration, 
-  y = qualidade_sono$Quality.of.Sleep,
-  xlab = "Duracao do sono",
-  ylab = "Qualidade do sono",
-  main = "Gráfico de dispersão Duracao e Qualidade do sono")
+### Distúrbios do sono
+Dentre os colaboradores analisados, observa-se que uma quantidade preocupante de mulheres que sofrem com apneia do sono (tabela 1).
+
+**Tabela 1:  Tabela de contingência percentual de distúrbios do sono por gênero**
+```{R echo=FALSE}
+round(prop.table(table(data$gender, data$sleep_disorder), margin = 1)*100,0)
 ```
 
-Correlação entre duracao e qualidade do sono: `r round(cor(x = qualidade_sono$Sleep.Duration, y = qualidade_sono$Quality.of.Sleep, method = "spearman"), 1)`
-
-
-```{r}
-boxplot(qualidade_sono$Physical.Activity.Level ~ qualidade_sono$sleep_disorder_adj,
+Colaboradores com distúrbios do sono tem uma mediana de horas de sono, muito menor do que colaboradores sem nenhum distúrbio. Quando distúrbios são comparados, colaboradores com insônia tem uma mediana de sono menor que os com apneia do sono, porém os dois cenários são preocupantes, porque o quartil inferior dos dois distúrbios estão em níveis muito baixos (gráfico 4).
+```{R echo=FALSE}
+boxplot(data$Sleep.Duration ~ data$sleep_disorder,
         col = "lightblue",
-        border = "gray",
-        xlab = "Desordem  de sono",
-        ylab = "Nivel de atividade fisica",
-        main = "Boxplot desordem de sono do sono por nivel de atividade fisica")
+        xlab = "Distúrbio do sono",
+        ylab = "Duração do sono (h)")
+title("Gráfico 4: Boxplot de distúrbios do sono por duração do sono")
 ```
 
+## Recomendações
 
+Com base nas análises realizadas, é recomendado ao setor de recursos humanos realizar ações, principalmente de conscientização, direcionadas aos principais problemas observados, utilizando como principal fonte a cartilha da Academia Brasileira do Sono (2025).
+
+1. Realizar workshops de respiração e meditação, técnicas que auxiliam o início e manutenção do sono;
+2. Distribuir blocos de notas com instruções para escrever compromissos e preocupações para desacelerar antes de dormir;
+3. Distribuir cartilhas com dicas para higiene do sono;
+4. Realizar parcerias com profissionais da saúde que atendem os principais distúrbios do sono observados entre os colaboradores
+5. Continuar realizando pesquisas e acompanhando o desenvolvimento da saúde mental dos colaboradores
+
+
+### Referências
+
+**ACADEMIA BRASILEIRA DO SONO (ABS)**. Cartilha da Semana do Sono 2025: ABS, 2025. Disponível em: https://semanadosono.com.br/wp-content/uploads/2025/02/DIGITAL-cartilha-semana-do-sono-2025-FEV2025.pdf. Acesso em: 2 jun. 2025.
+
+**ACADEMIA BRASILEIRA DO SONO (ABS)**. Sono, saúde mental e bem-estar psicológico no adulto: ABS, 2024. Disponível em: https://absono.com.br/wp-content/uploads/2024/12/ABS-DIGITAL-cartilha-sono-saude-mental-bem-estar-psicologico-adulto-DEZ2024.pdf. Acesso em: 2 jun. 2025.
